# frictionlesser

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  README.md  frictionlesser.def
app/: CMakeLists.txt  datatester.cpp  frictionlesser-objfunc.cpp  frictionlesser.cpp  frictionlesser.h
doc/: CMakeLists.txt
include/R/: pgamma.h
include/frictionless/: cache.h  eval.h  frictionless.h  frictionless.hpp  log.h  parser.h  score.h  signature.h  transcriptome.h  zakievranks.h
scripts/paris/: README.md  Snakefile  average-correlations__rkcorr-to-npy.py  clean_slurm.sh  config.yaml  config_preproc.yaml  correlations_genes-samples.py  correlations_signatures-genes.py  correlations_signatures.py  counts__hdf5-to-csv.py  expe_build.sh  expe_run.sh  genes-correlations__sign-to-npy.py  genes-standardized-over-samples__sign-to-npy.py  hdf5_to_csv.py  npy-avcorr_plot.py  paris_preproc_mara_hdf5.py  paris_preproc_seurat_hdf5.py  preproc-mara__npz-to-hdf5.py  preproc.Snakefile  preproc_mara.py  qc-observed-genes.py  qc_genes-corr_clustering.py  qc_selfcorr-score.py  ranks_tsv_to_h5an.py  run-maestro.sh  run-maestro_slurm.sh  scores_signatures-samples.py  search.Snakefile  sign-avcorr-full_clustering.py  signatures-clustering.py  signatures-correlations__sign-to-npy.py  signatures-pvalues.py  signatures.py  signatures_jaccard-distances_plot.py  submit-expe_10.sh  submit-run.sh  validation.Snakefile
scripts/paris/data/input/: README.md
scripts/paris/data/inter/: README.md
scripts/paris/data/output/: README.md
scripts/paris/data_test/input/: counts.npz  features.csv  meta.csv
scripts/paris/data_test/output/: signature_1.tsv  signature_2.tsv  signatures.tsv
scripts/test-Neftel/: Snakefile  config.yaml
src/: CMakeLists.txt  cache.cpp  eval.cpp  frictionless.cpp  log.cpp  parser.cpp  pgamma.cpp  score.cpp  transcriptome.cpp  zakievranks.cpp
tests/: CMakeLists.txt  evals_t.cpp  frictionless_t.cpp  ranks_small_NOK_Inconsistent.csv  ranks_small_NOK_RowFormat-Comment.csv  ranks_small_NOK_RowFormat-Digit.csv  ranks_small_NOK_SumRanks.csv  ranks_small_OK.csv  tests.cpp
